mudanças feitas por jesus

--- a/index.html
+++ b/index.html
@@ -9,7 +9,8 @@
 <body>
     <h1>Infraestrutura Escolar!</h1>
     <div>
-        trabalhinho do jesus
+        trabalhinho do jesus! Isso é uma mentira.
+        Zero para vocês.
     </div>
 </body>
 </html>
