--- a/index.html
+++ b/index.html
@@ -16,5 +16,8 @@
         trabalhinho do jesus! Isso é uma mentira.
         Zero para vocês.
     </div>
+    <div>
+        Nova div.
+    </div>
 </body>
 </html>
