--- a/index.html
+++ b/index.html
@@ -1,23 +1,19 @@
 <!DOCTYPE html>
-<html lang="pt-br">
+<html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>document</title>
+    <title>Projeto</title>
+    <link rel="stylesheet" href="geral.css">
 </head>
 <body>
-    <h1>da 10 pra gente</h1>
-    <span>
-        trabalho de jesus
-    </span>
-    <h1>projeto de mudanças</h1>
-    <div>
-        trabalhinho do jesus! Isso é uma mentira.
-        Zero para vocês.
-    </div>
-    <div>
-        Nova div.
-    </div>
+    <nav>
+        <ul>
+            <li>
+                <a></a>
+            </li>
+        </ul>
+    </nav>
 </body>
 </html>
